Update themes: Maximal saturation for Ocean and Cyberpunk, Total Black Winter

--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
         </div>
     </div>
 
+    <div id="particles"></div>
+
+    <div class="theme-switcher">
+        <button class="theme-btn active" data-theme="minimal" title="Минимализм">
+            <i class="fa-solid fa-circle-half-stroke"></i>
+        </button>
+        <button class="theme-btn" data-theme="winter" title="Зима">
+            <i class="fa-regular fa-snowflake"></i>
+        </button>
+        <button class="theme-btn" data-theme="cyberpunk" title="Киберпанк">
+            <i class="fa-solid fa-bolt"></i>
+        </button>
+        <button class="theme-btn" data-theme="ocean" title="Океан">
+            <i class="fa-solid fa-water"></i>
+        </button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
