--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вход в систему</title>
+    <title>BAHUR - Вход в систему</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,8 @@
     <div class="login-container">
         <div class="login-card">
             <div class="brand-logo">
-                <i class="fa-solid fa-cube"></i>
+                <span class="brand-text">BAHUR</span>
+                <i id="dynamicLogo" class="fa-solid fa-cube dynamic-logo-icon"></i>
             </div>
 
             <h1>Добро пожаловать</h1>
