Refactor: Switch to single button theme toggler

--- a/dashboard.html
+++ b/dashboard.html
@@ -53,12 +53,9 @@
                 <h2 id="pageTitle">Главная</h2>
                 <div class="user-profile">
                     <div class="theme-switcher-dashboard">
-                        <button class="theme-btn" onclick="setTheme('base')" title="Minimal"><i
-                                class="fa-solid fa-sun opacity-50"></i></button>
-                        <button class="theme-btn" onclick="setTheme('theme-winter')" title="Winter"><i
-                                class="fa-regular fa-snowflake"></i></button>
-                        <button class="theme-btn" onclick="setTheme('theme-cyberpunk')" title="Cyberpunk"><i
-                                class="fa-solid fa-bolt"></i></button>
+                        <button class="theme-btn theme-toggle-btn" title="Переключить тему">
+                            <i class="fa-solid fa-sun"></i>
+                        </button>
                     </div>
                     <div class="avatar">
                         <i class="fa-solid fa-user"></i>
