--- a/index.html
+++ b/index.html
@@ -63,14 +63,8 @@
     <div id="particles"></div>
 
     <div class="theme-switcher">
-        <button class="theme-btn active" data-theme="minimal" title="Минимализм">
-            <i class="fa-solid fa-circle-half-stroke"></i>
-        </button>
-        <button class="theme-btn" data-theme="winter" title="Зима">
-            <i class="fa-regular fa-snowflake"></i>
-        </button>
-        <button class="theme-btn" data-theme="cyberpunk" title="Киберпанк">
-            <i class="fa-solid fa-bolt"></i>
+        <button class="theme-btn theme-toggle-btn" title="Переключить тему">
+            <i class="fa-solid fa-sun"></i> <!-- Default icon, updated by JS -->
         </button>
     </div>
 
