--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <div class="theme-switcher">
         <button class="theme-btn theme-toggle-btn" title="Переключить тему">
-            <i class="fa-solid fa-sun"></i> <!-- Default icon, updated by JS -->
+            <i class="fa-solid fa-sun"></i>
         </button>
     </div>
 
