UI Update: Factory Toggle, Bottle Capsule Slider, Pricing Logic (Cost/Sum), Remove Q4

--- a/dashboard.html
+++ b/dashboard.html
@@ -133,11 +133,12 @@
                         <table class="products-table">
                             <thead>
                                 <tr>
-                                    <th style="width: 25%">Название</th>
-                                    <th style="width: 20%">Бренд</th>
-                                    <th style="width: 20%">Качество</th>
+                                    <th style="width: 20%">Название</th>
+                                    <th style="width: 15%">Фабрика</th>
+                                    <th style="width: 15%">Качество</th>
+                                    <th style="width: 10%">Стоимость</th>
                                     <th style="width: 15%">Объем</th>
-                                    <th style="width: 10%">Цена</th>
+                                    <th style="width: 15%">Сумма</th>
                                     <th style="width: 10%"></th>
                                 </tr>
                             </thead>
