UI Cleanup: Remove clear cart button, sync checkout button colors with theme, and fix cart view overlap

--- a/dashboard.html
+++ b/dashboard.html
@@ -119,13 +119,10 @@
             </div>
 
             <!-- Cart View -->
-            <div id="view-cart" style="display: none;">
+            <div id="view-cart" style="display: none; padding-bottom: 100px;">
                 <div class="card large-card">
-                    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
+                    <div style="margin-bottom:20px;">
                         <h3>Ваш заказ</h3>
-                        <button
-                            style="background:transparent; border:none; color:var(--text-color); opacity:0.3; cursor:pointer; font-size:0.75rem; text-decoration:underline;"
-                            onclick="clearCart()">Очистить корзину</button>
                     </div>
                     <div class="table-responsive">
                         <table class="products-table">
