Levels: Implementation of infinite leveling system (Lvl 1+) starting from 7k, removed slogans, and added level badge to profile

--- a/dashboard.html
+++ b/dashboard.html
@@ -55,6 +55,8 @@
             <div class="top-bar">
                 <h2 id="pageTitle">Каталог</h2>
                 <div class="user-profile">
+                    <div id="userLevelHeader"
+                        style="margin-right:15px; font-weight:700; font-size:0.9rem; opacity:0.8;">Уровень 0</div>
                     <button class="theme-toggle-btn" onclick="toggleTheme()" title="Сменить тему">
                         <i class="fa-solid fa-sun"></i>
                     </button>
