UI: Add dynamic Tesla-style level progress icon to cart bar

--- a/dashboard.html
+++ b/dashboard.html
@@ -162,8 +162,9 @@
 
     <!-- Floating Cart Progress Bar -->
     <div id="cartBar" class="cart-progress-container">
-        <div class="cart-icon-box">
-            <i class="fa-solid fa-basket-shopping"></i>
+        <div class="cart-icon-box" id="cartLevelIcon">
+            <div class="level-fill" id="cartLevelFill"></div>
+            <span id="cartLevelPct">0%</span>
         </div>
         <div class="cart-info">
             <div class="cart-labels">
