--- a/dashboard.html
+++ b/dashboard.html
@@ -160,8 +160,7 @@
                                 <span id="cartViewTotal">0 ₽</span>
                             </div>
                         </div>
-                        <button class="btn-primary checkout-btn"
-                            style="padding:12px 25px; font-size:0.95rem; min-width:200px;">
+                        <button class="btn-primary checkout-btn">
                             <i class="fa-solid fa-rocket" style="margin-right:8px;"></i>
                             <span>Оформить заказ</span>
                         </button>
@@ -176,22 +175,11 @@
     <div id="cartBar" class="cart-progress-container expanded-bar">
         <div class="cart-icon-designer-box">
             <div class="designer-icon-wrapper">
-                <!-- Designer Shopping Bag SVG - Line Fill Logic -->
+                <!-- Designer Shopping Bag SVG - Simple White -->
                 <svg viewBox="0 0 24 24" class="bag-svg">
-                    <!-- Base white lines -->
                     <path
                         d="M19,7H16V6c0-2.21-1.79-4-4-4S8,3.79,8,6V7H5C3.9,7,3,7.9,3,9v10c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9 C21,7.9,20.1,7,19,7z M10,6c0-1.1,0.9-2,2-2s2,0.9,2,2v1H10V6z M19,19H5V9h3v1h2V9h4v1h2V9h3V19z"
-                        fill="none" stroke="#ffffff" stroke-width="1.2" />
-
-                    <clipPath id="bagClip">
-                        <rect id="bagFillRect" x="0" y="24" width="24" height="0" />
-                    </clipPath>
-
-                    <!-- Filling aquamarine lines -->
-                    <path
-                        d="M19,7H16V6c0-2.21-1.79-4-4-4S8,3.79,8,6V7H5C3.9,7,3,7.9,3,9v10c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V9 C21,7.9,20.1,7,19,7z M10,6c0-1.1,0.9-2,2-2s2,0.9,2,2v1H10V6z M19,19H5V9h3v1h2V9h4v1h2V9h3V19z"
-                        fill="none" stroke="#7bf0c3" stroke-width="1.2" clip-path="url(#bagClip)"
-                        class="neon-line-fill" />
+                        fill="#ffffff" />
                 </svg>
             </div>
             <div class="pct-designer-row">
