UI: Instant login redirect, 100+ dynamic icons, and cache busting

--- a/dashboard.html
+++ b/dashboard.html
@@ -72,6 +72,10 @@
                     <button class="theme-toggle-btn" onclick="toggleTheme()" title="Сменить тему">
                         <i class="fa-solid fa-sun"></i>
                     </button>
+                    <div class="user-info-group" style="display:flex; flex-direction:column; align-items:flex-end;">
+                        <span class="display-user-phone"
+                            style="font-size:0.85rem; font-weight:600; opacity:0.8;">Гость</span>
+                    </div>
                     <div class="avatar">
                         <i class="fa-solid fa-user"></i>
                     </div>
@@ -200,7 +204,7 @@
     </div>
 
     <script src="data.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js?v=1.1"></script>
 </body>
 
 </html>
